[gd_scene format=3 uid="uid://c64aec30x4ui3"]

[ext_resource type="Script" uid="uid://cn1cu4jq4voc1" path="res://personajes/pengu/Pengu.gd" id="1_vlyhv"]
[ext_resource type="AudioStream" uid="uid://dtyx857ovj2u4" path="res://Audio/sonidopengu (mp3cut.net).mp3" id="2_5x1gt"]
[ext_resource type="Texture2D" uid="uid://cu6evxpk30025" path="res://personajes/pengu/Gemini_Generated_Image_axqrcqaxqrcqaxqr.png" id="2_ka03h"]
[ext_resource type="Texture2D" uid="uid://d0ma7j87xsfdb" path="res://personajes/pengu/Pengu.png" id="3_b3k8w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ka03h"]
atlas = ExtResource("2_ka03h")
region = Rect2(0, 992, 544, 992)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iu10"]
atlas = ExtResource("2_ka03h")
region = Rect2(1088, 992, 544, 992)

[sub_resource type="AtlasTexture" id="AtlasTexture_huo5s"]
atlas = ExtResource("3_b3k8w")
region = Rect2(736, 0, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_fooyo"]
atlas = ExtResource("3_b3k8w")
region = Rect2(1472, 0, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jyhs"]
atlas = ExtResource("3_b3k8w")
region = Rect2(1472, 640, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eyrk"]
atlas = ExtResource("3_b3k8w")
region = Rect2(736, 1280, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_8saqy"]
atlas = ExtResource("3_b3k8w")
region = Rect2(1472, 1280, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_dls2k"]
atlas = ExtResource("3_b3k8w")
region = Rect2(0, 1280, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_n300t"]
atlas = ExtResource("3_b3k8w")
region = Rect2(0, 640, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfa06"]
atlas = ExtResource("3_b3k8w")
region = Rect2(736, 640, 736, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3k8w"]
atlas = ExtResource("2_ka03h")
region = Rect2(544, 992, 544, 992)

[sub_resource type="AtlasTexture" id="AtlasTexture_n70cn"]
atlas = ExtResource("2_ka03h")
region = Rect2(1632, 992, 544, 992)

[sub_resource type="AtlasTexture" id="AtlasTexture_coknn"]
atlas = ExtResource("2_ka03h")
region = Rect2(0, 0, 544, 992)

[sub_resource type="AtlasTexture" id="AtlasTexture_yctyi"]
atlas = ExtResource("2_ka03h")
region = Rect2(544, 0, 544, 992)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr0xy"]
atlas = ExtResource("2_ka03h")
region = Rect2(1088, 0, 544, 992)

[sub_resource type="AtlasTexture" id="AtlasTexture_djghj"]
atlas = ExtResource("2_ka03h")
region = Rect2(1632, 0, 544, 992)

[sub_resource type="SpriteFrames" id="SpriteFrames_4wott"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka03h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iu10")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_huo5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fooyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jyhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8saqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dls2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n300t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfa06")
}],
"loop": true,
"name": &"walk",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka03h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iu10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3k8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n70cn")
}],
"loop": true,
"name": &"walk_down",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_coknn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yctyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr0xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djghj")
}],
"loop": true,
"name": &"walk_up",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3k8w"]
size = Vector2(179, 94)

[sub_resource type="CircleShape2D" id="CircleShape2D_ka03h"]
radius = 3737.5

[sub_resource type="Gradient" id="Gradient_0dr8p"]
colors = PackedColorArray(0, 0, 0, 0, 0.9607843, 0, 0, 0.45882353)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b3k8w"]
gradient = SubResource("Gradient_0dr8p")
fill = 1
fill_from = Vector2(0.43818182, 0.7690909)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dkkff"]
size = Vector2(933.33325, 999.9999)

[node name="Pengu" type="CharacterBody2D" unique_id=1275163384]
z_index = 20
scale = Vector2(0.045, 0.045)
script = ExtResource("1_vlyhv")
sfx_grito = ExtResource("2_5x1gt")

[node name="RayCast2D" type="RayCast2D" parent="." unique_id=420111022]
target_position = Vector2(0, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=888229361]
sprite_frames = SubResource("SpriteFrames_4wott")
animation = &"walk"
frame_progress = 0.6228012

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1598862330]
position = Vector2(51, 223)
shape = SubResource("RectangleShape2D_b3k8w")

[node name="DetectionArea" type="Area2D" parent="." unique_id=1616118278]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionArea" unique_id=244475069]
position = Vector2(37.5, 50)
shape = SubResource("CircleShape2D_ka03h")

[node name="Timer" type="Timer" parent="." unique_id=1733392276]
wait_time = 4.0
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=865100829]
radius = 25.0

[node name="PointLight2D" type="PointLight2D" parent="." unique_id=734356169]
visible = false
position = Vector2(52, 44)
scale = Vector2(58.773438, 49.6875)
color = Color(0.8235294, 0, 0, 0.22352941)
texture = SubResource("GradientTexture2D_b3k8w")

[node name="HitboxAtaque" type="Area2D" parent="." unique_id=14366003]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxAtaque" unique_id=273601706]
position = Vector2(7.6293945e-06, 0)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_dkkff")

[node name="AudioSusto" type="AudioStreamPlayer2D" parent="." unique_id=907828276]
max_distance = 700.0
attenuation = 6.276669

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
